--- a/docs/drone.css
+++ b/docs/drone.css
@@ -40,11 +40,6 @@ section ul li:before {
 	margin-bottom: 0.85em;
 }
 
-.book.color-theme-2 img.big-clover {
-	/* change image for black background */
-	content:url(assets/clover42-black.png);
-}
-
 footer {
 	margin-top: 35px;
 	border-top: 1px solid #e9e9e9;
@@ -57,7 +52,7 @@ footer img {
 	margin-right: .85em;
 }
 
-/*Assemble clover 4.2 article*/
+/*Assemble article*/
 .type_table tr td {
 	padding: 14px 20px;
 }
